src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AccountTypeNew__c</fullName>
        <description>Type of Lead.  IMPORTANT: If you want this to be tracked as a deal, SET THIS AS &quot;OWNER&quot;!</description>
        <inlineHelpText>Type of Lead.  IMPORTANT: If you want this to be tracked as a deal, SET THIS AS &quot;OWNER&quot;!</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalAccType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account Name)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Vertical__c</fullName>
        <inlineHelpText>What account vertical is this lead in?</inlineHelpText>
        <label>Account Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture - General</fullName>
                </value>
                <value>
                    <fullName>Agriculture - Winery</fullName>
                </value>
                <value>
                    <fullName>Alternative - Club</fullName>
                </value>
                <value>
                    <fullName>Education - General</fullName>
                </value>
                <value>
                    <fullName>Education - Higher Edu</fullName>
                </value>
                <value>
                    <fullName>Education - K-12</fullName>
                </value>
                <value>
                    <fullName>Healthcare - General</fullName>
                </value>
                <value>
                    <fullName>Healthcare - MOB</fullName>
                </value>
                <value>
                    <fullName>Healthcare - Regional Hospital</fullName>
                </value>
                <value>
                    <fullName>Hospitality - Boutique Hotel</fullName>
                </value>
                <value>
                    <fullName>Hospitality - Casino</fullName>
                </value>
                <value>
                    <fullName>Hospitality - General</fullName>
                </value>
                <value>
                    <fullName>Hospitality - Motel</fullName>
                </value>
                <value>
                    <fullName>Hospitality - Resort Hotel</fullName>
                </value>
                <value>
                    <fullName>Industrial - Cold Storage</fullName>
                </value>
                <value>
                    <fullName>Industrial - Distribution Center</fullName>
                </value>
                <value>
                    <fullName>Industrial - General</fullName>
                </value>
                <value>
                    <fullName>Industrial - Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Industrial - MM Facility</fullName>
                </value>
                <value>
                    <fullName>Industrial - R&amp;D Flex</fullName>
                </value>
                <value>
                    <fullName>Industrial - Self Storage</fullName>
                </value>
                <value>
                    <fullName>Mixed-Use</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - General</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - High-Rise</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - Mid-Rise</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - Mixed Use</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - Mobile Home Park</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - Senior Living</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - Student Housing</fullName>
                </value>
                <value>
                    <fullName>Office - General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquisition_Price__c</fullName>
        <inlineHelpText>The price that the Property Owner acquired the Property for</inlineHelpText>
        <label>Acquisition Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Already_Applied_for_Incentives__c</fullName>
        <inlineHelpText>Has the Property Owner already applied for incentives for the measures for which you&apos;re requesting PACE financing?</inlineHelpText>
        <label>Already Applied for Incentives?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_Contact_Company__c</fullName>
        <description>If building owner contact information is not available, use this contact option.</description>
        <label>Alt Contact Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Contact_Email__c</fullName>
        <label>Alt Contact Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Contact_Name__c</fullName>
        <label>Alt Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Contact_Phone__c</fullName>
        <label>Alt Contact Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Contact_TItle__c</fullName>
        <label>Alt Contact TItle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Received_Date__c</fullName>
        <label>App Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_Verified_Date__c</fullName>
        <label>App Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Submission_Date__c</fullName>
        <inlineHelpText>Date the application was submitted.</inlineHelpText>
        <label>Application Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Completed_in_Last_5_Years__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This captures whether there has been an appraisal in the last 5 years.</description>
        <label>Appraisal Completed in Last 5 Years?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appraisal_Date__c</fullName>
        <label>Appraisal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraised_Value__c</fullName>
        <inlineHelpText>The appraised value of the property.</inlineHelpText>
        <label>Appraised Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Are_all_Mortgages_s_current__c</fullName>
        <inlineHelpText>Capture any deliquencies.</inlineHelpText>
        <label>Are all Mortgages(s) current?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessed_Value__c</fullName>
        <inlineHelpText>The assessed value of the property.</inlineHelpText>
        <label>Assessed Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bankruptcies__c</fullName>
        <label>Bankruptcies?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bankruptcy_Comment__c</fullName>
        <label>Bankruptcy Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benchmark_Date_at_Indicative_Quote__c</fullName>
        <label>Benchmark Date at Indicative Quote</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benchmark_Type__c</fullName>
        <label>Benchmark Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interest Rate Swap Yield</fullName>
                </value>
                <value>
                    <fullName>U.S. Treasury constant maturity yield</fullName>
                </value>
                <value>
                    <fullName>Fixed Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benchmark_at_Indicative_Quote__c</fullName>
        <label>Benchmark at Indicative Quote</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Building_Size_sq_ft__c</fullName>
        <inlineHelpText>The square footage of the Property</inlineHelpText>
        <label>Building Size (sq. ft.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Tenant__c</fullName>
        <description>Major tenant(s) in the building.</description>
        <label>Building Tenant</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Lead_Source__c</fullName>
        <label>CF Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CF_Lead_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Sub_Lead_Source__c</fullName>
        <description>Name the specific Lead Source.</description>
        <label>CF Sub-Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Fee__c</fullName>
        <label>Channel Partner Fee</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Type__c</fullName>
        <label>Channel Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AccountTypeNew__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Energy Service</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Loan Broker</fullName>
                </value>
                <value>
                    <fullName>Investment Broker</fullName>
                </value>
                <value>
                    <fullName>Solar Integrator</fullName>
                </value>
                <value>
                    <fullName>Solar EPC</fullName>
                </value>
                <value>
                    <fullName>Solar Developer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CleanQuote_URL__c</fullName>
        <inlineHelpText>If this Lead was generated via CleanQuote then this is the url to the CleanQuote app.</inlineHelpText>
        <label>CleanQuote URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CleanQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CleanQuote</label>
        <referenceTo>CleanQuote__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cnt__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cnt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Status_Initial_Engagement__c</fullName>
        <label>Construction Status-Initial Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Building Being Acquired</fullName>
                </value>
                <value>
                    <fullName>Conceptual and Planning Stage</fullName>
                </value>
                <value>
                    <fullName>Energy Analysis / Audit in Progress</fullName>
                </value>
                <value>
                    <fullName>Design in Process</fullName>
                </value>
                <value>
                    <fullName>Scope Identified</fullName>
                </value>
                <value>
                    <fullName>Soliciting Bids</fullName>
                </value>
                <value>
                    <fullName>Contractor Identified</fullName>
                </value>
                <value>
                    <fullName>Scope / Budget Identified</fullName>
                </value>
                <value>
                    <fullName>Permits Pulled</fullName>
                </value>
                <value>
                    <fullName>In Construction</fullName>
                </value>
                <value>
                    <fullName>Construction Complete</fullName>
                </value>
                <value>
                    <fullName>Solar Developer Identified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_Timeline_Mo__c</fullName>
        <formula>IF(YEAR(Project_Finish_Date__c) = YEAR(Close_Date__c), 
MONTH(Project_Finish_Date__c) - MONTH(Close_Date__c), 
FLOOR((Project_Finish_Date__c - Close_Date__c) / 30.25) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Construction Timeline (Mo.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Timeline__c</fullName>
        <label>Construction Timeline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>within 3 months</fullName>
                </value>
                <value>
                    <fullName>within 6 months</fullName>
                </value>
                <value>
                    <fullName>within 9 months</fullName>
                </value>
                <value>
                    <fullName>within 12 months</fullName>
                </value>
                <value>
                    <fullName>greater than 12 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contamination_Comment__c</fullName>
        <inlineHelpText>Owner&apos;s comment on if there&apos;s any knowledge/evidence of potential or actual contamination at the Property or adjacent properties?</inlineHelpText>
        <label>Contamination Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contamination__c</fullName>
        <inlineHelpText>Is there any knowledge/evidence of potential or actual contamination at the Property or adjacent properties?</inlineHelpText>
        <label>Contamination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor_City__c</fullName>
        <label>Contractor City</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contractor_Company_Name__c</fullName>
        <label>Contractor Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Email__c</fullName>
        <label>Contractor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contractor_First__c</fullName>
        <inlineHelpText>The Contractor&apos;s First Name</inlineHelpText>
        <label>Contractor First</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Geo_Location__c</fullName>
        <label>Contractor Geo Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Contractor_Last__c</fullName>
        <label>Contractor Last</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Phone__c</fullName>
        <label>Contractor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contractor_State__c</fullName>
        <label>Contractor State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor_Street__c</fullName>
        <label>Contractor Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contractor_Zip__c</fullName>
        <label>Contractor Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_or_EPC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor or EPC</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Contractor or EPC)</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Balance_1st__c</fullName>
        <label>Current Balance (1st)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Balance_2nd__c</fullName>
        <label>Current Balance (2nd)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Occupancy__c</fullName>
        <inlineHelpText>The current occupancy of all tenants</inlineHelpText>
        <label>Current Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Dead_Lost__c</fullName>
        <label>Date Dead-Lost</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Declared_Dormant__c</fullName>
        <label>Date Declared Dormant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dead_Lost_Comment__c</fullName>
        <label>Dead-Lost Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dead_Lost_Reason__c</fullName>
        <label>Dead-Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Fell Through</fullName>
                </value>
                <value>
                    <fullName>Interest Rate and/or Fees</fullName>
                </value>
                <value>
                    <fullName>Building Sold or Pending</fullName>
                </value>
                <value>
                    <fullName>Other PACE Financing Provided</fullName>
                </value>
                <value>
                    <fullName>Bank or Other Financing Provided</fullName>
                </value>
                <value>
                    <fullName>Mortgage Lender Provided Financing</fullName>
                </value>
                <value>
                    <fullName>Mortgage Lender Declined</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t Meet Credit Standards</fullName>
                </value>
                <value>
                    <fullName>No PACE Program</fullName>
                </value>
                <value>
                    <fullName>PACE Program Fault</fullName>
                </value>
                <value>
                    <fullName>Key Personnel Change</fullName>
                </value>
                <value>
                    <fullName>CMBS Servicer</fullName>
                </value>
                <value>
                    <fullName>No Retrofit Pursued</fullName>
                </value>
                <value>
                    <fullName>Owner / Partner Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Self-Financed</fullName>
                </value>
                <value>
                    <fullName>Owner lender concerns</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_Project_Finish_Date__c</fullName>
        <inlineHelpText>What is the desired project finish date.</inlineHelpText>
        <label>Desired Project Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detail_of_Improvements__c</fullName>
        <label>Detail of Improvements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dormancy_Resolution_Date__c</fullName>
        <label>Dormancy Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Storage_System_Capacity_kWh__c</fullName>
        <label>Energy Storage System Capacity (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Energy_Storage_System_Power_kW__c</fullName>
        <label>Energy Storage System Power (kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_Issues__c</fullName>
        <label>Environmental Issues?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_Site_Assessment_Completed__c</fullName>
        <label>Environmental Site Assessment Completed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_Studies_Performed__c</fullName>
        <label>Environmental Studies Performed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TSA</fullName>
                </value>
                <value>
                    <fullName>Phase I</fullName>
                </value>
                <value>
                    <fullName>Phase II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Equipment Supplier)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Est_days_to_complete_project__c</fullName>
        <label>Est. days to complete  project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Demand_Charge_Escalation__c</fullName>
        <label>Estimated Demand Charge Escalation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Utility_Rate_Escalation__c</fullName>
        <inlineHelpText>What is the estimated rate at which utility costs will rise?</inlineHelpText>
        <label>Estimated Utility Rate Escalation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Phase_II_Report_Completed__c</fullName>
        <label>Existing Phase II Report Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Phase_I_Report_Completed__c</fullName>
        <label>Existing Phase I Report Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Total_Storage_Rebate__c</fullName>
        <label>Expected Total Storage Rebate ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Crime_Comments__c</fullName>
        <inlineHelpText>Owner comments on if the Owner Entity (or its Coporate Parent) or any related party to the transaction, has been convicted of any crime, or subject to any regulatory action, in the past seven years</inlineHelpText>
        <label>Financial Crime Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Crime__c</fullName>
        <inlineHelpText>Has the Owner Entity (or its Coporate Parent) or any related party to the transaction, been convicted of any crime, or subject to any regulatory action, in the past seven years</inlineHelpText>
        <label>Financial Crime</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financing_Term__c</fullName>
        <inlineHelpText>This will be the financing term for the opportunity</inlineHelpText>
        <label>Financing Term</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Mortgage__c</fullName>
        <label>First Mortgage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foreclosure_Short_Sale_Comment__c</fullName>
        <inlineHelpText>Owner comment on if the Owner Entity (or its Coporate Parent) has been involved in, or subject to a Foreclosure, Short Sale, or Deed in Lieu of Foreclosure in the prior seven years?</inlineHelpText>
        <label>Foreclosure, Short Sale Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foreclosure_Short_Sale_or_Deed_in_Lieu__c</fullName>
        <inlineHelpText>Has the Owner Entity (or its Coporate Parent) been invovled in, or subject to a Foreclosure, Short Sale, or Deed in Lieu of Foreclosure in the prior seven years?</inlineHelpText>
        <label>Foreclosure, Short Sale, or Deed in Lieu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corona</fullName>
                </value>
                <value>
                    <fullName>Petros</fullName>
                </value>
                <value>
                    <fullName>Ygrene</fullName>
                </value>
                <value>
                    <fullName>Blue Mountain Capital</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
                <value>
                    <fullName>Transitional</fullName>
                </value>
                <value>
                    <fullName>Starwood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Government_Regulations_Comment__c</fullName>
        <inlineHelpText>Owner&apos;s comment on if there are any governmental entity taken any regulatory actions for environmental conditions at the property?</inlineHelpText>
        <label>Government Regulations Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ground_Lease_Expiration_Date__c</fullName>
        <label>Ground Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ground_Lease__c</fullName>
        <label>Ground Lease</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hazardous_Substances_Comment__c</fullName>
        <inlineHelpText>Owner&apos;s comment on any hazardous substances that are used, treated, or stored on the Property</inlineHelpText>
        <label>Hazardous Substances Comment</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>